--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,12 @@ ament_target_dependencies(turtle_tf2_listener
   tf2_ros
   turtlesim
 )
+add_executable(fixed_frame_tf2_broadcaster src/fixed_frame_tf2_broadcaster.cpp)
+ament_target_dependencies(fixed_frame_tf2_broadcaster
+  geometry_msgs
+  rclcpp
+  tf2_ros
+)
 # My install targets
 install(TARGETS
   static_turtle_tf2_broadcaster
@@ -49,6 +55,10 @@ install(TARGETS
 )
 install(TARGETS
   turtle_tf2_listener
+  DESTINATION lib/${PROJECT_NAME}
+)
+install(TARGETS
+  fixed_frame_tf2_broadcaster
   DESTINATION lib/${PROJECT_NAME}
 )
 install(DIRECTORY
