--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,12 @@ ament_target_dependencies(fixed_frame_tf2_broadcaster
   rclcpp
   tf2_ros
 )
+add_executable(dynamic_frame_tf2_broadcaster src/dynamic_frame_tf2_broadcaster.cpp)
+ament_target_dependencies(dynamic_frame_tf2_broadcaster
+  geometry_msgs
+  rclcpp
+  tf2_ros
+)
 # My install targets
 install(TARGETS
   static_turtle_tf2_broadcaster
@@ -59,6 +65,10 @@ install(TARGETS
 )
 install(TARGETS
   fixed_frame_tf2_broadcaster
+  DESTINATION lib/${PROJECT_NAME}
+)
+install(TARGETS
+  dynamic_frame_tf2_broadcaster
   DESTINATION lib/${PROJECT_NAME}
 )
 install(DIRECTORY
